--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.24MB/s(Youtube:不良林), server: hk01.henet.cyou, port: 20000, type: vmess, uuid: ad0f1f7c-590c-4bb5-ae5b-e6ac8f170cf8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: hk01.henet.cyou}}
-  - {name: 🇷🇺 俄罗斯联邦-1006.3KB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-647.7KB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
-  - {name: 🇭🇰 香港-513.6KB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-336.6KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-956.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-270.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇺🇸 美国-235.8KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.03MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-161.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇺🇸 美国-782.1KB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-567.5KB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-281.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-722.3KB/s(Youtube:不良林), server: vus4.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus4.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-513.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1006.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-647.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-336.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-956.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-270.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-235.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.03MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-161.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-782.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-567.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-722.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
