--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-273.1KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-225.9KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-340.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.92MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-234.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-471.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-476.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.92MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-333.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-281.8KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-662.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇳 中国-3.28MB/s(Youtube:不良林), server: zz6.91js.pw, port: 10051, type: trojan, password: a13820c547fa34c5c45515c12f0cd576, sni: zz6.91js.pw, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 172.96.192.58, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
+  - {name: 🇨🇳 中国-463.8KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-273.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.9KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-2.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-234.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-471.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-333.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-281.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-662.9KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-351.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
